--- a/Tasks2D/Project.toml
+++ b/Tasks2D/Project.toml
@@ -4,11 +4,15 @@ authors = ["George Matheos <georgematheos@gmail.com>"]
 version = "0.1.0"
 
 [deps]
+DynamicForwardDiff = "fe4ab2f8-f6ba-4905-aa0c-1342e36db709"
 Fmt = "953ef90b-1442-41a6-b3b1-93af3dbebb63"
 Gen = "ea4f424c-a589-11e8-07c0-fd5c91b9da4a"
 GenPOMDPs = "f88df91c-fa0e-46d7-b73d-4420684e5acb"
 GenParticleFilters = "56b76ac4-72ef-411e-b419-6d312ed86a6f"
+GenSMCP3 = "6e3e2a6b-0f0c-4e92-9366-99a169bb9780"
+GenTraceKernelDSL = "291bb3ad-7d9c-4053-a5d5-3e3d67792b79"
 GridWorlds = "c15fd557-8ec5-4bf9-9d87-df57ac477796"
+IJulia = "7073ff75-c697-5162-941a-fcdaad2a7d2a"
 LineWorlds = "378ae85f-3ccf-4c92-8c74-de8c49c343b8"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 WGLMakie = "276b4fcb-3e11-5398-bf8b-a0c2d153d008"
