--- a/Tasks2D/Project.toml
+++ b/Tasks2D/Project.toml
@@ -15,4 +15,5 @@ GridWorlds = "c15fd557-8ec5-4bf9-9d87-df57ac477796"
 IJulia = "7073ff75-c697-5162-941a-fcdaad2a7d2a"
 LineWorlds = "378ae85f-3ccf-4c92-8c74-de8c49c343b8"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+VoxelRayTracers = "d9e3e1c4-15df-46c7-bfdb-139154feb7ae"
 WGLMakie = "276b4fcb-3e11-5398-bf8b-a0c2d153d008"
