--- a/Tasks2D/Project.toml
+++ b/Tasks2D/Project.toml
@@ -4,6 +4,7 @@ authors = ["George Matheos <georgematheos@gmail.com>"]
 version = "0.1.0"
 
 [deps]
+AStarSearch = "e6cbe913-2b79-4cc5-848a-e3bbf8537828"
 DynamicForwardDiff = "fe4ab2f8-f6ba-4905-aa0c-1342e36db709"
 Fmt = "953ef90b-1442-41a6-b3b1-93af3dbebb63"
 Gen = "ea4f424c-a589-11e8-07c0-fd5c91b9da4a"
