--- a/Tasks2D/Project.toml
+++ b/Tasks2D/Project.toml
@@ -8,6 +8,7 @@ AStarSearch = "e6cbe913-2b79-4cc5-848a-e3bbf8537828"
 DynamicForwardDiff = "fe4ab2f8-f6ba-4905-aa0c-1342e36db709"
 Fmt = "953ef90b-1442-41a6-b3b1-93af3dbebb63"
 FunctionalCollections = "de31a74c-ac4f-5751-b3fd-e18cd04993ca"
+GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 Gen = "ea4f424c-a589-11e8-07c0-fd5c91b9da4a"
 GenPOMDPs = "f88df91c-fa0e-46d7-b73d-4420684e5acb"
 GenParticleFilters = "56b76ac4-72ef-411e-b419-6d312ed86a6f"
@@ -16,6 +17,7 @@ GenTraceKernelDSL = "291bb3ad-7d9c-4053-a5d5-3e3d67792b79"
 GridWorlds = "c15fd557-8ec5-4bf9-9d87-df57ac477796"
 IJulia = "7073ff75-c697-5162-941a-fcdaad2a7d2a"
 LineWorlds = "378ae85f-3ccf-4c92-8c74-de8c49c343b8"
+Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 VoxelRayTracers = "d9e3e1c4-15df-46c7-bfdb-139154feb7ae"
