progress - new localization notebook

--- a/GridWorlds/Project.toml
+++ b/GridWorlds/Project.toml
@@ -9,3 +9,4 @@ FunctionalCollections = "de31a74c-ac4f-5751-b3fd-e18cd04993ca"
 Gen = "ea4f424c-a589-11e8-07c0-fd5c91b9da4a"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
+StatsFuns = "4c63d2b9-4356-54db-8cca-17b64c39e42c"
