--- a/Tasks2D/Project.toml
+++ b/Tasks2D/Project.toml
@@ -22,5 +22,6 @@ Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 Serialization = "9e88b42a-f829-5b0c-bbe9-9e923198166b"
+StatsFuns = "4c63d2b9-4356-54db-8cca-17b64c39e42c"
 VoxelRayTracers = "d9e3e1c4-15df-46c7-bfdb-139154feb7ae"
 WGLMakie = "276b4fcb-3e11-5398-bf8b-a0c2d153d008"
